# echis_web

./: .dockerignore  .flaskenv.example  .gitignore  Procfile  README.md  docker-compose.yaml  main.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  flask.yml  node.build.js.yml  node.js.yml
client/: .eslintcache  angular.json  package-lock.json  package.json  tsconfig.json  tslint.json
client/public/: manifest.json
client/src/: App.tsx  index.html  index.scss  router.tsx  styles.scss
client/src/app/: app-routing.module.ts  app.module.ts
client/src/environments/: environment.prod.ts  environment.ts
client/src/style/: _var.scss
client_react/: .eslintrc.js  package-lock.json  package.json
client_react/public/: index.html
client_react/src/: App.test.tsx  enviroment.ts
client_react/src/style/: _mixin.scss
echis_web/: __init__.py  commands.py  extensions.py  routes.py  settings.py
echis_web/controllers/: auth_controller.py  home_controller.py  share_controller.py
echis_web/exception/: exceptions.py
echis_web/forms/: auth_form.py
echis_web/model/: filter_model.py  share_model.py  user_model.py
echis_web/models/: user_model.py
echis_web/templates/: 404.html  base.html
echis_web/utils/: decorators.py  token.py  weather.py
tests/: base_test_case.py  conftest.py  fatories.py
tests/config/: test_config.py
tests/controllers/: test_auth_controller.py  test_home_controller.py  test_share_controller.py
tests/models/: test_user_model.py
tests/utils/: test_decorators.py  test_token.py  test_weather.py
(+96 files in other folders)
