[tool.poetry]
name = "echis_web2"
version = "0.0.1"
description = ""
authors = ["kengenal", "Undero"]

[tool.poetry.dependencies]
python = "^3.8.8"
Flask = "^1.1.2"
flask-mongoengine = "^1.0.0"
PyJWT = "^1.7.1"
gunicorn = "^20.1.0"
flasgger = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.3"
factory_boy = "3.1.0"
mongomock = "^3.22.1"
python-dotenv = "^0.17.0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
